<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.mk.pwdguard.viewModel.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".view.fragments.AuthFragment">

        <ImageView
            android:id="@+id/banner"
            android:layout_width="300dp"
            android:layout_height="250dp"
            android:src="@drawable/secure_data"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/banner" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />



            <TextView
                android:id="@+id/new_password_tv"
                style="@style/titleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_password"
                android:textColor="#000000"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/new_password_et"
                style="@style/valueText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/new_password"
                android:inputType="numberPassword"
                android:minHeight="48dp"
                android:text="@={viewModel.newPasswd}"
                app:layout_constraintEnd_toStartOf="@+id/eye_new_pwd_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/new_password_tv"
                android:autofillHints="" />

            <ImageView
                android:id="@+id/eye_new_pwd_btn"
                android:layout_width="20dp"
                android:layout_height="0dp"
                android:src="@drawable/eye"
                android:tag="hidden"
                app:layout_constraintBottom_toBottomOf="@+id/new_password_et"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/new_password_et"
                android:contentDescription="@string/eye_button" />

            <TextView
                android:id="@+id/repeat_password_tv"
                style="@style/titleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/repeat_password"
                android:textColor="#000000"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/new_password_et" />

            <EditText
                android:id="@+id/repeat_password_et"
                style="@style/valueText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/repeat_password"
                android:inputType="numberPassword"
                android:minHeight="48dp"
                android:text="@={viewModel.repeatPasswd}"
                app:layout_constraintEnd_toStartOf="@+id/eye_repeat_pwd_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/repeat_password_tv"
                android:autofillHints="" />

            <ImageView
                android:id="@+id/eye_repeat_pwd_btn"
                android:layout_width="20dp"
                android:layout_height="0dp"
                android:src="@drawable/eye"
                android:tag="hidden"
                app:layout_constraintBottom_toBottomOf="@+id/repeat_password_et"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/repeat_password_et"
                android:contentDescription="@string/eye_button" />

            <TextView
                android:id="@+id/pick_question_tv"
                style="@style/titleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/pick_a_security_question"
                android:textColor="#000000"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/repeat_password_et" />

            <Spinner
                android:id="@+id/question_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pick_question_tv" />

            <TextView
                android:id="@+id/answer_tv"
                style="@style/titleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/answer"
                android:textColor="#000000"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/question_dropdown" />

            <EditText
                android:id="@+id/answer_et"
                style="@style/valueText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/answer"
                android:inputType="text"
                android:minHeight="48dp"
                android:text="@={viewModel.answer}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/answer_tv"
                android:autofillHints="" />

            <CheckBox
                android:id="@+id/ask_password_cb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:checked="@={viewModel.askPasswd}"
                android:text="@string/ask_password_at_start"
                app:layout_constraintBottom_toTopOf="@+id/submit_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/submit_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/primary"
                android:text="@string/submit"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/password_tv"
            style="@style/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/banner" />

            <EditText
                android:id="@+id/password_et"
                style="@style/valueText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/password"
                android:inputType="numberPassword"
                android:minHeight="48dp"
                android:text="@={viewModel.passwd}"
                app:layout_constraintEnd_toStartOf="@+id/eye_pwd1_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_tv"
                android:autofillHints="" />

            <ImageView
                android:id="@+id/eye_pwd1_btn"
                android:layout_width="20dp"
                android:layout_height="0dp"
                android:src="@drawable/eye"
                android:tag="hidden"
                app:layout_constraintBottom_toBottomOf="@+id/password_et"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/password_et"
                android:contentDescription="@string/eye_button" />

            <TextView
                android:id="@+id/forgot_password_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/forgot_password"
                android:textColor="#4FA0F7"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_et" />

            <TextView
                android:id="@+id/or_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/or"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forgot_password_tv" />

            <ImageButton
                android:id="@+id/fingerprint_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/transparent"
                android:src="@drawable/ic_baseline_fingerprint_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/or_tv"
                android:contentDescription="@string/fingerprint_auth"
                />

        <Button
            android:id="@+id/unlock_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:backgroundTint="@color/primary"
            android:text="@string/unlock"
            android:textColor="@color/black"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <androidx.constraintlayout.widget.Group
            android:id="@+id/auth_layout_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:constraint_referenced_ids="password_tv,fingerprint_btn,eye_pwd1_btn,password_et,forgot_password_tv,or_tv,unlock_btn,banner"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp"
            tools:visibility="invisible" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/create_auth_layout_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:constraint_referenced_ids="repeat_password_tv,pick_question_tv,answer_et,submit_btn,repeat_password_et,eye_repeat_pwd_btn,question_dropdown,ask_password_cb,new_password_et,answer_tv,eye_new_pwd_btn,new_password_tv"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp"
            tools:visibility="visible"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>