<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.mk.pwdguard.viewModel.StorePwdViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragments.StorePwdFragment"
        android:padding="16dp"
        >


        <TextView
            android:id="@+id/title_tv"
            style="@style/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:labelFor="@id/title_et"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/title" />

        <EditText
            android:id="@+id/title_et"
            style="@style/valueText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:minHeight="48dp"
            android:text="@={viewModel.credential.title}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_tv"
            android:autofillHints="" />

        <TextView
            android:id="@+id/site_tv"
            style="@style/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/site"
            android:labelFor="@id/site_et"
            android:text="@string/site"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_et" />

        <EditText
            android:id="@+id/site_et"
            style="@style/valueText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="text"
            android:text="@={viewModel.credential.site}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/site_tv"
            android:autofillHints="" />

        <TextView
            android:id="@+id/username_tv"
            style="@style/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/username"
            android:labelFor="@id/username_et"
            android:text="@string/username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/site_et" />

        <EditText
            android:id="@+id/username_et"
            style="@style/valueText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="text"
            android:text="@={viewModel.credential.username}"
            android:textColorHighlight="@color/primary"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/username_tv"
            android:autofillHints="" />

        <TextView
            android:id="@+id/password_tv"
            style="@style/titleText"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginTop="8dp"
            android:hint="@string/password"
            android:labelFor="@id/pwd_et"
            android:text="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/username_et" />

        <EditText
            android:id="@+id/pwd_et"
            style="@style/valueText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="text"
            android:text="@={viewModel.credential.password}"
            android:textColorHighlight="@color/primary"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_tv"
            android:autofillHints="" />

        <TextView
            android:id="@+id/repeat_pwd_tv"
            style="@style/titleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/repeat_password"
            android:labelFor="@id/repeat_pwd_et"
            android:text="@string/repeat_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pwd_et" />

        <EditText
            android:id="@+id/repeat_pwd_et"
            style="@style/valueText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="text"
            android:text="@={viewModel.repeatPassword}"
            android:textColorHighlight="@color/primary"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/repeat_pwd_tv"
            android:autofillHints="" />

        <Button
            android:id="@+id/save_btn"
            style="@style/titleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary"
            android:text="@string/save"
            android:textColor="@color/black"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>