<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="credential"
            type="com.mk.pwdguard.model.domain.DomainModels.Credential" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:cardElevation="10dp"
        android:tag="collapsed"
        app:cardCornerRadius="5dp"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/title_tv"
                style="@style/titleText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:ellipsize="end"
                android:lines="1"
                android:text="@{credential.title}"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintEnd_toStartOf="@+id/exp_col_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Instagram" />

            <ImageView
                android:id="@+id/site_iv"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="8dp"

                android:src="@drawable/link"
                android:background="@drawable/rounded_corner"
                app:layout_constraintStart_toStartOf="@+id/title_tv"
                app:layout_constraintTop_toBottomOf="@+id/title_tv"
                android:contentDescription="@string/site" />

            <TextView
                android:id="@+id/site_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"

                android:text="@{credential.site}"
                android:textColor="#1976D2"
                android:textStyle="italic"
                android:ellipsize="end"
                android:lines="1"
                app:layout_constraintBottom_toBottomOf="@+id/site_iv"
                app:layout_constraintEnd_toEndOf="@+id/title_tv"
                app:layout_constraintStart_toEndOf="@+id/site_iv"
                app:layout_constraintTop_toTopOf="@+id/site_iv"
                tools:text="www.instagram.com" />

            <ImageView
                android:id="@+id/username_iv"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/user"
                android:background="@drawable/rounded_corner"
                app:layout_constraintStart_toStartOf="@+id/title_tv"
                app:layout_constraintTop_toBottomOf="@+id/site_iv"
                android:contentDescription="@string/username" />

            <TextView
                android:id="@+id/username_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@{credential.username}"
                android:textColor="#8A8A8A"
                android:ellipsize="end"
                android:lines="1"
                app:layout_constraintBottom_toBottomOf="@+id/username_iv"
                app:layout_constraintEnd_toStartOf="@+id/copy_username_btn"
                app:layout_constraintStart_toEndOf="@+id/username_iv"
                app:layout_constraintTop_toTopOf="@+id/username_iv"
                tools:text="mkmk" />


            <ImageView
                android:id="@+id/password_iv"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:padding="1dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/key_lined"
                android:background="@drawable/rounded_corner"
                app:layout_constraintStart_toStartOf="@+id/username_iv"
                app:layout_constraintTop_toBottomOf="@+id/username_iv"
                android:contentDescription="@string/password" />

            <TextView
                android:id="@+id/password_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@{credential.password}"
                android:textColor="#8A8A8A"
                android:ellipsize="end"
                android:lines="1"
                app:layout_constraintBottom_toBottomOf="@+id/password_iv"
                app:layout_constraintEnd_toStartOf="@+id/copy_password_btn"
                app:layout_constraintStart_toEndOf="@+id/password_iv"
                app:layout_constraintTop_toTopOf="@+id/password_iv"
                tools:text="*****" />

            <ImageButton
                android:id="@+id/copy_username_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/copy_button"
                android:minHeight="48dp"
                android:src="@drawable/copy"
                app:layout_constraintBottom_toBottomOf="@+id/username_iv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/username_iv" />

            <ImageButton
                android:id="@+id/copy_password_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/copy_button"
                android:minHeight="48dp"
                android:src="@drawable/copy"
                app:layout_constraintBottom_toBottomOf="@+id/password_iv"
                app:layout_constraintEnd_toEndOf="@+id/copy_username_btn"
                app:layout_constraintTop_toTopOf="@+id/password_iv" />

            <ImageButton
                android:id="@+id/edit_btn"
                android:layout_width="50dp"
                android:layout_height="0dp"
                android:background="@color/transparent"
                android:contentDescription="@string/edit_button"
                android:src="@drawable/edit"
                app:layout_constraintBottom_toBottomOf="@+id/title_tv"
                app:layout_constraintEnd_toStartOf="@id/delete_btn"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/exp_col_btn"
                android:layout_width="50dp"
                android:layout_height="0dp"
                android:background="@color/transparent"
                android:contentDescription="@string/expand_collapse_button"
                android:animateLayoutChanges="true"
                android:src="@drawable/ic_baseline_expand_more"
                app:layout_constraintBottom_toBottomOf="@+id/title_tv"
                app:layout_constraintEnd_toStartOf="@+id/edit_btn"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/delete_btn"
                android:layout_width="50dp"
                android:layout_height="0dp"
                android:background="@color/transparent"
                android:contentDescription="@string/delete_button"
                android:src="@drawable/ic_baseline_delete_outline_24"
                app:layout_constraintBottom_toBottomOf="@+id/edit_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/detailed_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="388dp"
                android:visibility="gone"
                app:constraint_referenced_ids="password_iv,copy_username_btn,site_tv,copy_password_btn,site_iv,password_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>